--- a/src/global.css
+++ b/src/global.css
@@ -9,3 +9,7 @@ body {
 .focus {
   @apply focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-zinc-900 focus:ring-brand-500 transition-colors;
 }
+
+.disabled {
+  @apply disabled:opacity-50 disabled:cursor-not-allowed;
+}
